--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <%= include_gon %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
@@ -44,6 +45,7 @@
         <ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
           <!-- サイドバーの内容 -->
           <li><a href="/" class="<%= current_page?(root_path) ? 'active' : '' %>">ホーム</a></li>
+          <li><a href="/charts" class="<%= current_page?(charts_path) ? 'active' : '' %>">チャート</a></li>
         </ul>
       </div>
     </div>
