サイドバーにchartsへのリンクを追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
         <ul class="menu p-4 w-80 min-h-full bg-base-200 text-base-content">
           <!-- サイドバーの内容 -->
           <li><a href="/" class="<%= current_page?(root_path) ? 'active' : '' %>">ホーム</a></li>
+          <li><a href="/charts" class="<%= current_page?(charts_path) ? 'active' : '' %>">チャート</a></li>
         </ul>
       </div>
     </div>
