--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,20 +1,7 @@
-<div class="container mx-auto p-4" data-turbo = "false">
+<div class="container mx-auto p-4" data-controller="chart">
   <h1 class="text-2xl font-bold mb-4">ApexCharts Sample</h1>
 
   <div class="bg-white rounded-lg shadow p-6">
-    <%= line_chart(
-      {
-        title: { text: 'Sample Line Chart' },
-        series: [
-          {
-            name: 'Sales',
-            data: [30, 40, 35, 50, 49, 60, 70, 91, 125]
-          }
-        ],
-        xaxis: {
-          categories: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep']
-        }
-      }
-    ) %>
+    <div id="chart" data-chart-target="container"></div>
   </div>
 </div>
