--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
           <!-- サイドバーの内容 -->
           <li><a href="/" class="<%= current_page?(root_path) ? 'active' : '' %>">ホーム</a></li>
           <li><a href="/charts" class="<%= current_page?(charts_path) ? 'active' : '' %>">チャート</a></li>
+          <li><a href="/ebay_orders" class="<%= current_page?(ebay_orders_path) ? 'active' : '' %>">eBay受注一覧</a></li>
         </ul>
       </div>
     </div>
